--- a/style.css
+++ b/style.css
@@ -47,11 +47,11 @@ a:hover, a:active{
 img, main{
     margin:5px 50px 0 25px;
     }
-/*form input, button {
+form input, label, button {
     color:grey;
     font-style:italic;
     margin-top:10px;
-}*/
+}
 aside, footer{
     text-align:center;
     font-size:11px;
@@ -69,9 +69,9 @@ aside, footer{
 }
 @media screen and (min-width:1024px){
 body{
-        background-color:aqua;
+        background-color:rgb(213, 228, 228);
         color:white;
-        font-size:10px;
+        font-size:17px;
         line-height:3;
     }
     }
